# librefang

./: CHANGELOG.md  README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  flake.nix
crates/librefang-api/dashboard/: package.json  pnpm-lock.yaml
crates/librefang-api/dashboard/src/: api.ts
crates/librefang-api/dashboard/src/locales/: en.json  zh.json
crates/librefang-api/dashboard/src/pages/: AgentsPage.tsx
crates/librefang-api/src/: channel_bridge.rs  middleware.rs  routes.rs  server.rs
crates/librefang-api/src/routes/: agents.rs  config.rs  goals.rs  memory.rs  system.rs
crates/librefang-api/static/locales/: en.json  zh-CN.json
crates/librefang-api/tests/fixtures/: kernel_config_schema.golden.json
crates/librefang-channels/src/: bridge.rs
crates/librefang-cli/src/: main.rs
crates/librefang-kernel/src/: event_bus.rs  kernel.rs
crates/librefang-kernel/src/kernel/: mod.rs
crates/librefang-llm-drivers/src/drivers/: mod.rs
crates/librefang-runtime/src/: agent_loop.rs  kernel_handle.rs
crates/librefang-testing/: Cargo.toml
crates/librefang-testing/src/: helpers.rs
crates/librefang-types/src/: agent.rs
crates/librefang-types/src/config/: types.rs
